# blend2d-rs

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  bors.toml  run_all_examples.py  rustfmt.toml
blend2d-sys/: CMakeLists.txt  Cargo.toml  build.rs
examples/: README.md  composition.rs  glyph_buffer.rs  gradient.rs  path.rs  pattern.rs  rust_bl_logo.rs  stroking.rs  test.rs  text_rendering.rs  transformation.rs
src/: array.rs  bl_impl.rs  codec.rs  context.rs  error.rs  font.rs  font_defs.rs  format.rs  geometry.rs  glyph_buffer.rs  gradient.rs  image.rs  lib.rs  macros.rs  matrix.rs  path.rs  pattern.rs  prelude.rs  region.rs  runtime.rs  util.rs  variant.rs  vtables.rs
src/font/: data.rs  face.rs  manager.rs
src/geometry/: path.rs
