[package]
name = "blend2d"
version = "0.1.1"
authors = ["Lukas Wirth <lukastw97@gmail.com>"]
edition = "2018"
description = "Rust bindings for blend2d"
homepage = "https://github.com/Veykril/blend2d-rs"
repository = "https://github.com/Veykril/blend2d-rs"
license = "MIT/Apache-2.0"
categories = ["api-bindings"]
readme = "README.md"
exclude = ["examples"]

[dependencies]
ffi = { package = "blend2d-sys", version = "0.1.1", path = "blend2d-sys" }
bitflags = "1.0.4"

[[example]]
name = "path"

[[example]]
name = "gradient"

[[example]]
name = "pattern"

[[example]]
name = "stroking"

[[example]]
name = "composition"

[[example]]
name = "transformation"
