[package]
name = "blend2d-sys"
version = "0.3.0"
authors = ["Lukas Wirth <lukastw97@gmail.com>"]
edition = "2018"
description = "Raw ffi bindings for blend2d"
homepage = "https://github.com/Veykril/blend2d-rs"
repository = "https://github.com/Veykril/blend2d-rs"
license = "MIT/Apache-2.0"
categories = ["external-ffi-bindings"]
build = "build.rs"
links = "blend2d"
exclude = ["blend2d/cmake-build-debug/*"]

[features]
default = ["sse2", "sse3", "ssse3", "sse4_1", "sse4_2", "avx", "avx2"]
sse2 = []
sse3 = []
ssse3 = []
sse4_1 = []
sse4_2 = []
avx = []
avx2 = []

[build-dependencies]
bindgen = "0.49"
cc = "1.0"
